--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <p class="counter__text">Промах:<span class="counter__span">0</span></p>
     </div>
     <div class="playing-field">
-        <div class="playing-field__box playing-field__image"></div>
+        <div class="playing-field__box playing-field__image_change_cursor"></div>
         <div class="playing-field__box"></div>
         <div class="playing-field__box"></div>
         <div class="playing-field__box"></div>
